# micro-training

./: .gitignore  README.md
exercise_01/: CMakeLists.txt  ProximityDatatype.cxx  ProximityDatatype.h  ProximityDatatype.idl  ProximityDatatypeApplication.cxx  ProximityDatatypeApplication.h  ProximityDatatypePlugin.cxx  ProximityDatatypePlugin.h  ProximityDatatype_publisher.cxx  ProximityDatatype_subscriber.cxx  README.txt
exercise_02/: ProximityDatatype.xml  ProximityDatatypeApplication.cxx  ProximityDatatypeSupport.cxx  ProximityDatatypeSupport.h  ProximityDatatype_publisher.cxx  ProximityDatatype_subscriber.cxx
exercise_03/: CMakeLists.txt  Datatypes.cxx  Datatypes.h  Datatypes.idl  DatatypesPlugin.cxx  DatatypesPlugin.h  DatatypesSupport.cxx  DatatypesSupport.h  application_common.cxx  application_common.h  controller.cxx  proximity_sensor.cxx
exercise_04/: CMakeLists.txt  Datatypes.cxx  Datatypes.h  Datatypes.idl  Datatypes.xml  DatatypesPlugin.cxx  DatatypesPlugin.h  DatatypesSupport.cxx  DatatypesSupport.h  application_common.cxx  application_common.h  brake.cxx  controller.cxx  proximity_sensor.cxx
